REGRESSION(96070) 25% intl1 PLT regression from scrollbar invalidation https://bugs.webkit.org/show_bug.cgi?id=69238

Reviewed by Darin Adler.

Fix PLT regression from additional scrollbars invalidations.

Don't invalidate the scrollbar rect from setHasHorizontalScrollbar()
and setHasVerticalScrollbar(), because this is called during FrameView
teardown, at which point the invalidation is redundant.

Instead, invalidate from ScrollView::updateScrollbars(), which is
called only when scrollbars change because of size or layout
changes.

* platform/ScrollView.cpp:
(WebCore::ScrollView::setHasHorizontalScrollbar):
(WebCore::ScrollView::setHasVerticalScrollbar):
(WebCore::ScrollView::updateScrollbars):

git-svn-id: svn://svn.chromium.org/blink/trunk@97079 bbb929c8-8fbe-4397-9dbb-9b2b20218538